# LexiCore

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
data/: 1.txt  2.txt  3.txt
include/io/: file_reader.hpp
include/preprocess/: preprocessing.hpp
include/search/: similarity_search.hpp
include/similarity/: cosine.hpp
include/vectorize/: TF-IDF.hpp  bow.hpp
src/io/: file_reader.cpp
src/preprocess/: preprocessing.cpp
src/search/: similarity_search.cpp
src/similarity/: cosine.cpp
src/vectorize/: TF-IDF.cpp  bow.cpp
tests/: CMakeLists.txt
tests/data/: doc1.txt  doc2.txt  doc3.txt  doc4.txt
tests/io/: test_file_reader.cpp
tests/preprocess/: test_preprocess.cpp
tests/search/: test_similarity_search.cpp
tests/similarity/: test_cosine.cpp
tests/vectorize/: test_bow.cpp  test_tfidf.cpp
